tests/derive/return_something.rs
use shipyard::*;

#[system(Test)]
fn run() -> usize { 0 }